// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Magento2/> Detail should render a detail view 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Magento 2
        </li>
      </ol>
    </nav>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      class="link"
      href="/app/settings/integrations/magento2/"
    >
      App Details
    </a>
    <a
      class="link"
      href="/app/settings/integrations/magento2/connections"
    >
      Connections
    </a>
  </nav>
  <header
    class="hero"
  >
    <img
      alt="Magento 2's logo"
      class="heroImage"
      src="/assets/img/integrations/magento.png"
    />
    <div>
      <h1
        class="heroHeading"
      >
        Magento 2
      </h1>
      <p
        class="heroDescription"
      >
        Display customer profiles & orders next to tickets. Edit orders with macros.
      </p>
      <div
        class="heroMeta"
      >
        <div
          class="ui-badge-badge-0cf8 badge ui-badge-uppercase-0cf8"
          data-color="grey"
          data-corner="round"
          data-name="badge"
          data-type="grey"
        >
          ECOMMERCE
        </div>
        <span
          class="by"
        >
          by
           
          <a
            href="https://www.gorgias.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Gorgias
          </a>
        </span>
      </div>
    </div>
  </header>
  <main
    class="main"
  >
    <section>
      <div
        class="longDescription"
      >
        <h2>
          About
        </h2>
        <div>
          <p>
            Securely connect with Magento to have your customers’ order history at your agents’ fingertips.
            <br />
            Magento is an ecommerce platform built on open source technology which provides online merchants with a flexible shopping cart system, as well as control over the look, content and functionality of their online store.
          </p>
          <p>
            The Gorgias plugin for Magento is currently compatible with 
            <strong>
              Magento 2.2
            </strong>
            , 
            <strong>
              2.3
            </strong>
             and 
            <strong>
              2.4
            </strong>
             for all Magento versions:
          </p>
          <ul>
            <li>
              Open Source (CE);
            </li>
            <li>
              Commerce using on prem (EE);
            </li>
            <li>
              Commerce on Cloud (ECE).
            </li>
          </ul>
          <h5
            class="mt-4"
          >
            Integration benefits
          </h5>
          <ul>
            <li>
              Display customer profiles next to tickets;
            </li>
            <li>
              Display orders, shipments and credit memos;
            </li>
            <li>
              Insert Magento 2 variables in macros;
            </li>
            <li>
              Use Magento 2 variables as filters in rules.
            </li>
          </ul>
        </div>
      </div>
      <ul
        class="screenshotList"
      >
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 1 of things this products allows you to do in Gorgias"
            class="screenshot"
            src="/assets/img/integrations/screenshots/magento-1.png"
          />
        </li>
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 2 of things this products allows you to do in Gorgias"
            class="screenshot"
            src="/assets/img/integrations/screenshots/magento-2.png"
          />
        </li>
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 3 of things this products allows you to do in Gorgias"
            class="screenshot"
            src="/assets/img/integrations/screenshots/magento-3.png"
          />
        </li>
      </ul>
    </section>
    <div
      class="infoCard card"
    >
      <div
        class="card-body"
      >
        <div
          class="actionWrapper"
        >
          <a
            class="connectButtonWrapper"
            href="/app/settings/integrations/magento2/new"
          >
            <button
              aria-disabled="false"
              class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
              data-name="button"
              data-rac=""
              data-react-aria-pressable="true"
              id="react-aria-:r0:"
              tabindex="0"
              type="button"
            >
              <div
                class="ui-button-surface-a432"
              >
                <span
                  class="ui-button-content-a432"
                >
                  <span
                    class="typography-bold-md ui-text-text-d239"
                    data-name="text"
                    style="text-align: left; text-wrap: nowrap;"
                  >
                    <strong>
                      Connect 
                      magento2
                    </strong>
                  </span>
                </span>
              </div>
            </button>
          </a>
        </div>
        <h2
          class="categoryTitle cardTitle"
        >
          Pricing
        </h2>
        <ul
          class="cardList"
        >
          <li>
            Free
          </li>
          <li>
            <a
              class="actionLink"
              href="https://business.adobe.com/products/magento/pricing.html"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                attach_money
              </i>
              See pricing details
            </a>
          </li>
        </ul>
        <h2
          class="categoryTitle cardTitle"
        >
          Resources
        </h2>
        <ul
          class="cardList"
        >
          <li>
            <a
              class="actionLink"
              href="https://docs.gorgias.com/ecommerce-integrations/magento-2"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                description
              </i>
              Documentation
            </a>
          </li>
          <li>
            <a
              class="actionLink"
              href="https://magento.com/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                privacy_tip
              </i>
              Privacy Policy
            </a>
          </li>
        </ul>
      </div>
    </div>
  </main>
</div>
`;

exports[`<Magento2/> Integration should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations/magento2/connections"
          >
            Magento 2
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        />
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="alert loading mb-4"
        >
          <div
            class="iconContainer"
          >
            <span
              class="loadingIcon"
            >
              <svg
                class="ui-loadingspinner-spinner-fc79 ui-loadingspinner-dark-fc79 ui-loadingspinner-small-fc79"
                data-name="loading-spinner"
                preserveAspectRatio="xMidYMid meet"
                role="status"
                viewBox="0 0 20 20"
              >
                <circle
                  class="ui-loadingspinner-dot-fc79"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <circle
                  class="ui-loadingspinner-circle-fc79"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <span
                  class="sr-only"
                >
                  Loading...
                </span>
              </svg>
            </span>
          </div>
          <div
            class="content"
          >
            <span
              class="label"
            >
              Import in progress. We typically sync 3,000 customers an hour. We will send you an email once it is done. Feel free to leave this page.
            </span>
          </div>
        </div>
        <form
          class=""
        >
          <label
            class="ui-label-label-a11c mb-2"
            for="store-field"
          >
            Store admin URL
            <abbr
              aria-label="required"
              class="ui-label-abbr-a11c"
              title="required"
            >
              *
            </abbr>
          </label>
          <span
            class="mb-4 wrapper group horizontal"
          >
            <span
              class="groupAddon left"
            >
              https:///
            </span>
            <div
              class="wrapper right isNested"
            >
              <input
                class="input"
                data-resizable="false"
                id="store-field"
                name="admin-url-suffix"
                placeholder="ex: admin_45f1c"
                required=""
                type="text"
                value=""
              />
            </div>
          </span>
          <div
            data-name="box"
            style="justify-content: space-between; display: flex;"
          >
            <div
              data-name="box"
              style="display: flex; gap: 12px;"
            >
              <button
                aria-disabled="true"
                class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
                data-disabled="true"
                data-name="button"
                data-rac=""
                data-react-aria-pressable="true"
                disabled=""
                id="react-aria-:r2:"
                type="button"
              >
                <div
                  class="ui-button-surface-a432"
                >
                  <span
                    class="ui-button-content-a432"
                  >
                    <span
                      class="typography-bold-md ui-text-text-d239"
                      data-name="text"
                      style="text-align: left; text-wrap: nowrap;"
                    >
                      <strong>
                        Update Connection
                      </strong>
                    </span>
                  </span>
                </div>
              </button>
            </div>
            <button
              aria-disabled="false"
              class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-destructive-cef1"
              id="delete-integration"
              type="button"
            >
              <i
                aria-hidden="true"
                class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486"
              >
                delete
              </i>
              <span
                class="ui-button-content-cef1"
              >
                Delete App
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Magento2/> List should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Magento 2
        </li>
      </ol>
    </nav>
    <div>
      <a
        class="connectButtonWrapper"
        href="/app/settings/integrations/magento2/new"
      >
        <button
          aria-disabled="false"
          class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
          data-name="button"
          data-rac=""
          data-react-aria-pressable="true"
          id="react-aria-:r6:"
          tabindex="0"
          type="button"
        >
          <div
            class="ui-button-surface-a432"
          >
            <span
              class="ui-button-content-a432"
            >
              <span
                class="typography-bold-md ui-text-text-d239"
                data-name="text"
                style="text-align: left; text-wrap: nowrap;"
              >
                <strong>
                  Connect 
                  magento2
                </strong>
              </span>
            </span>
          </div>
        </button>
      </a>
    </div>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      class="link"
      href="/app/settings/integrations/magento2/"
    >
      App Details
    </a>
    <a
      class="link"
      href="/app/settings/integrations/magento2/connections"
    >
      Connections
    </a>
  </nav>
  <ul
    class="list"
  >
    <li
      class="listItem"
    >
      <a
        class="link"
        href="/app/settings/integrations/magento2/1"
      >
        <span>
          myShop1
        </span>
        <i
          class="material-icons md-3"
        >
          keyboard_arrow_right
        </i>
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Magento2/> New should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations/magento2/connections"
          >
            Magento 2
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Connect app
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <h2
          class="stepTitle"
        >
          Step 1
        </h2>
        <p>
          Follow
           
          <a
            href="https://docs.gorgias.com/en-US/magento-2-81817"
            rel="noopener noreferrer"
            target="_blank"
          >
            these instructions
          </a>
           
          to install Gorgias extension to your Magento 2 store.
          <br />
          Make sure to complete this step, or else the connection will not work.
        </p>
        <h2
          class="stepTitle"
        >
          Step 2
        </h2>
        <label
          class="ui-label-label-a11c"
        >
          How do you want to connect this app?
          <abbr
            aria-label="required"
            class="ui-label-abbr-a11c"
            title="required"
          >
            *
          </abbr>
        </label>
        <div
          class="selectionButtonGroup"
        >
          <div
            aria-checked="true"
            aria-label="Connect in 1 click"
            class="wrapper selected selectionButton"
            role="radio"
            tabindex="0"
          >
            <div>
              <label
                class="ui-label-label-a11c label"
                for="radio-button-oneStepConnect"
              >
                <input
                  checked=""
                  class="input"
                  id="radio-button-oneStepConnect"
                  tabindex="-1"
                  type="radio"
                />
                Connect in 1 click
              </label>
            </div>
          </div>
          <div
            aria-checked="false"
            aria-label="Connect manually"
            class="wrapper selectionButton"
            id="magento-manual-connect3"
            role="radio"
            tabindex="0"
          >
            <div>
              <label
                class="ui-label-label-a11c label"
                for="radio-button-magento-manual-connect3"
              >
                <input
                  class="input"
                  id="radio-button-magento-manual-connect3"
                  tabindex="-1"
                  type="radio"
                />
                Connect manually
              </label>
            </div>
          </div>
        </div>
        <form
          class=""
        >
          <label
            class="ui-label-label-a11c mb-2"
            for="store-field"
          >
            Store admin URL
            <abbr
              aria-label="required"
              class="ui-label-abbr-a11c"
              title="required"
            >
              *
            </abbr>
          </label>
          <span
            class="mb-4 wrapper group horizontal"
          >
            <span
              class="groupAddon left"
            >
              https://
            </span>
            <div
              class="wrapper right isNested"
            >
              <input
                class="input"
                data-resizable="false"
                id="store-field"
                name="admin-url"
                pattern="^[a-z.0-9-]*\\.[a-z0-9]*(:[0-9]+)?\\/(index\\.php)?[\\/\\w\\d_-]*$"
                placeholder="ex: acme.com/admin_45f1c"
                required=""
                type="text"
                value=""
              />
            </div>
          </span>
          <div
            data-name="box"
            style="justify-content: space-between; display: flex;"
          >
            <div
              data-name="box"
              style="display: flex; gap: 12px;"
            >
              <button
                aria-disabled="true"
                class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
                data-disabled="true"
                data-name="button"
                data-rac=""
                data-react-aria-pressable="true"
                disabled=""
                id="react-aria-:r4:"
                type="button"
              >
                <div
                  class="ui-button-surface-a432"
                >
                  <span
                    class="ui-button-content-a432"
                  >
                    <span
                      class="typography-bold-md ui-text-text-d239"
                      data-name="text"
                      style="text-align: left; text-wrap: nowrap;"
                    >
                      <strong>
                        Connect App
                      </strong>
                    </span>
                  </span>
                </div>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
